prevented table overflow

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -20,3 +20,7 @@ h3 {
 .show {
 	display: auto;
 }
+
+.collection-table {
+	max-width: 100%;
+}
